Setting up for queryAvailableDrone